--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,18 @@
 #logo {
   height: 70px;
-  width: 110px;
-}
-body{
-  margin: 0px;
+  width: auto;
 
 }
 
 header {
-  background-color: red;
   padding: 10px 10px;
+  box-shadow: 2px 2px 5px;
 }
 
 figure{
   display: inline-block;
   width: 30%;
-  margin: 0px;
+  margin: 10px;
 }
 
 figure img{
@@ -25,11 +22,10 @@ figure img{
 nav{
   float:right;
   display: inline-block;
-  padding: 0px;
 }
 
 nav ul{
-  padding:0px;
+  padding: 20px 0;
 }
 
 nav ul li{
@@ -41,6 +37,7 @@ nav ul li a{
   text-decoration: none;
   margin-left: 10px;
   padding: 10px;
+  align-items: center;
 
 }
 
@@ -55,6 +52,7 @@ section {
   background-color: blue;
   width: 70%;
   display: inline-block;
+
 }
 
 aside {
@@ -66,10 +64,8 @@ aside {
 
 footer {
   background-color: red;
-  position: fixed;
-  bottom: 0px;
-  width: 100%;
-  height: 10%;
+  display:block;
+  clear:both;
 }
 
 /*
