--- a/css/style.css
+++ b/css/style.css
@@ -64,10 +64,8 @@ aside {
 
 footer {
   background-color: red;
-  position: fixed;
-  bottom: 0px;
-  width: 100%;
-  height: 10%;
+  display:block;
+  clear:both;
 }
 
 /*
