--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,10 @@ aside {
 
 footer {
   background-color: red;
-  display:block;
-  clear:both;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 10%;
 }
 
 /*
