--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,11 @@ body{
 #logo {
   height: 70px;
   width: auto;
-
 }
 
 header {
   padding: 10px 10px;
-  box-shadow: 2px 2px 5px;
+  margin-bottom: 10px;
 }
 
 figure{
