--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,34 @@
-body{
-  margin:0px;
-}
+/*color: rgb(202, 37 ,57)*/
 
-#logo {
-  height: 70px;
-  width: auto;
+body{
+  margin:0;
 }
 
 header {
-  padding: 10px 10px;
-  margin-bottom: 10px;
+  padding: 2px 2px;
+  margin: 0;
 }
 
 figure{
   display: inline-block;
-  width: 30%;
+  width: 11%;
   margin: 10px;
+  text-align: center;
 }
 
 figure img{
   width: 30%;
 }
 
+#logo {
+  height: 60px;
+  width: auto;
+}
+
 nav{
   float:right;
   display: inline-block;
+  margin-right: 10px
 }
 
 nav ul{
@@ -40,15 +44,14 @@ nav ul li a{
   text-decoration: none;
   margin-left: 10px;
   padding: 10px;
-  align-items: center;
-
+  font-family: sans-serif;
 }
 
 nav ul li a:hover{
   padding: 10px;
-  background-color: blue;
+  background-color: rgb(202, 37 ,57);
   color: white;
-  border-radius: 10px;
+  /*border-radius: 5px;*/
 }
 
 section {
