--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*color: rgb(202, 37 ,57)*/
 
-body{
+body {
   margin: 0;
   background-color: rgb(240, 240, 240);
 }
@@ -13,14 +13,14 @@ header {
   background-color: white;
 }
 
-figure{
+figure {
   display: inline-block;
   width: 11%;
   margin: 10px;
   text-align: center;
 }
 
-figure img{
+figure img {
   width: 30%;
 }
 
@@ -29,17 +29,17 @@ figure img{
   width: auto;
 }
 
-nav{
+nav {
   float:right;
   display: inline-block;
   margin-right: 10px
 }
 
-nav ul{
+nav ul {
   padding: 20px 0;
 }
 
-nav ul li{
+nav ul li {
   display: inline-block;
 }
 
@@ -51,29 +51,45 @@ nav ul li a{
   font-family: sans-serif;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
   padding: 10px;
-  background-color: rgb(202, 37 ,57);
-  color: white;
+  /*background-color: rgb(202, 37 ,57);*/
+  /*color: white;*/
   /*border-radius: 5px;*/
+  border-bottom: 3px solid rgb(202, 37 ,57);
 }
 
 section {
-  background-color: blue;
   width: 70%;
   display: inline-block;
-
+  /*box-shadow: 1px 1px 4px;*/
+  background-color: white;
 }
 
 aside {
-  /*background-color: green;*/
   width: 29%;
   display: inline-block;
   float: right;
-  box-shadow: 1px 1px 4px;
-  border-radius: 4px;
+  box-shadow: 1 1 4px;
+  border-radius: 2px;
+  background-color: white;
+  margin-bottom: 60px;
 }
 
+aside h3 {
+  padding-left: 10px;
+  color: grey;
+  font-family: sans-serif;
+  font-size: 14px;
+}
+
+aside p {
+  padding-left: 10px;
+  padding-right: 10px;
+  color: grey;
+  font-family: sans-serif;
+  font-size: 14px;
+}
 
 footer {
   background-color: #262324;
@@ -124,6 +140,7 @@ footer #contactForm ul{
   padding: 0px;
   list-style: none;
   color:#E6E6E6;
+
   width: 40%;
   margin: 0px;
   display: inline-block;
@@ -141,7 +158,7 @@ footer #contactForm ul:last-child{
 }
 
 
-/*
+
 
 @media (max-width: 500px) {
   section{
@@ -153,5 +170,3 @@ footer #contactForm ul:last-child{
     width: 100%;
   }
 }
-
-*/
