--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,6 @@ footer #imgContent figure{
 }
 
 footer #imgContent figure img{
-  /*width: 100%;*/
   opacity: 0.4;
   width: 5vh;
 }
@@ -160,13 +159,83 @@ footer #contactForm ul:last-child{
 
 
 
-@media (max-width: 500px) {
+
+/* Extra Small (XS) para smartphones*/
+
+@media (max-width: 767px) {
   section{
-    display:block;
-    width:100%;
+    display: block;
+    width: inherit;
+    padding: 5px;
+    margin-bottom: 10px;
   }
-  aside{
-    display:block;
+  aside {
+    width: inherit;
+    display: block;
+    border-radius: 2px;
+    background-color: red;
+    margin-bottom: 45px;
+  }
+
+  footer{
+    padding: 5px 0px 0px 0px;
+    opacity: 0.9;
+  }
+
+  footer div#imgContent{
+    padding: 0px;
+    margin: 0px;
+  }
+
+  footer div#imgContent figure{
+    margin: 0px 0px 0px 10px;
+  }
+
+  footer div#imgContent figure img{
+    width: 1.5rem;
+    /*font-size: 1rem;*/
+  }
+
+  footer ul li{
+    display: none;
+  }
+
+  footer #contactForm ul:first-child{
     width: 100%;
+    margin:0px;
+    text-align: center;
   }
+
+  footer ul:first-child li:first-child{
+    display: inline;
+    font-size: 0.9rem;
+  }
+
+}
+
+
+
+
+/* Small Devices (SM) Para tablets  */
+
+@media (min-width: 768px)  and (max-width: 991px){
+  aside{
+    background-color: blue;
+  }
+}
+
+/* Medium Devices (MD) Para dektops */
+
+@media (min-width: 992px) and (max-width: 1199px){
+aside{
+    background-color: GREEN;
+  }
+}
+
+/* Large Devices (LG) Para desktops grandes */
+
+@media (min-width: 1200px) {
+  aside{
+      background-color: yellow;
+    }
 }
