--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /*color: rgb(202, 37 ,57)*/
+/* los rems son la mejor unidad para hacer
+todo responsive */
+
 
 body {
   margin: 0;
@@ -53,9 +56,6 @@ nav ul li a{
 
 nav ul li a:hover {
   padding: 10px;
-  /*background-color: rgb(202, 37 ,57);*/
-  /*color: white;*/
-  /*border-radius: 5px;*/
   border-bottom: 3px solid rgb(202, 37 ,57);
 }
 
@@ -96,8 +96,6 @@ footer {
   position: fixed;
   bottom: 0px;
   width: 100%;
-  /*height: 2rem;*/
-  /*display: block;*/
 }
 
 footer #imgContent{
