--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,13 @@
 /* los rems son la mejor unidad para hacer
 todo responsive */
 
+h1,h2,h3,h4,h5,h6{
+  font-family: "SourceSansPro-Bold";
+}
+
+p{
+  font-family: "SourceSansPro-Regular";
+}
 
 body {
   margin: 0;
@@ -51,11 +58,10 @@ nav ul li a{
   text-decoration: none;
   margin-left: 10px;
   padding: 10px;
-  font-family: sans-serif;
+  font-family: "SourceSansPro-Semibold";
 }
 
 nav ul li a:hover {
-  padding: 10px;
   border-bottom: 3px solid rgb(202, 37 ,57);
 }
 
@@ -63,6 +69,7 @@ section {
   width: 70%;
   display: inline-block;
   /*box-shadow: 1px 1px 4px;*/
+  font-family: "SourceSansPro-Regular";
   background-color: white;
 }
 
@@ -79,15 +86,13 @@ aside {
 aside h3 {
   padding-left: 10px;
   color: grey;
-  font-family: sans-serif;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 aside p {
   padding-left: 10px;
   padding-right: 10px;
   color: grey;
-  font-family: sans-serif;
   font-size: 14px;
 }
 
@@ -136,7 +141,6 @@ footer #contactForm ul{
   padding: 0px;
   list-style: none;
   color:#E6E6E6;
-
   width: 40%;
   margin: 0px;
   display: inline-block;
@@ -160,18 +164,41 @@ footer #contactForm ul:last-child{
 /* Extra Small (XS) para smartphones*/
 
 @media (max-width: 767px) {
+
+/* CAMBIO EN EL MENU */
+
+  header figure{
+    display: block;
+    text-align: center;
+    width: inherit;
+  }
+
+  nav{
+    display: block;
+    float: none;
+    text-align: center;
+  }
+
+/* FIN CAMBIO DEL MENU */
+
   section{
     display: block;
     width: inherit;
     padding: 5px;
     margin-bottom: 10px;
   }
+
   aside {
     width: inherit;
     display: block;
     border-radius: 2px;
-    background-color: red;
+    background-color: white;
     margin-bottom: 45px;
+  }
+
+  aside h3{
+    font-size: 1.5rem;
+    margin-left: 10px;
   }
 
   footer{
