Centrado del header

--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,15 @@ footer #contactForm ul:last-child{
     display: block;
     float: none;
     text-align: center;
+    margin-right: 0px;
+  }
+
+  nav ul{
+    padding: 10px 0px;
+  }
+
+  nav ul li a{
+    margin: 0px;
   }
 
 /* FIN CAMBIO DEL MENU */
