--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ nav ul li a{
   margin-left: 10px;
   padding: 10px;
   font-family: "SourceSansPro-Semibold";
+  cursor: pointer;
 }
 
 nav ul li a:hover {
