--- a/css/competition.css
+++ b/css/competition.css
@@ -3,6 +3,21 @@
 /* los rems son la mejor unidad para hacer
 todo responsive */
 
+.btnSuccess{
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #5cb85c;
+  color:white;
+  text-decoration: none;
+  font-family: "SourceSansPro-Light";
+  border-radius: 10px;
+  text-align: center;
+}
+
+.btnSuccess:hover{
+  background-color: #4b9e4b;
+}
+
 h1,h2,h3,h4,h5,h6,p,li{
   font-family: "SourceSansPro-Bold";
   color: #696969;
@@ -87,6 +102,10 @@ section:last-of-type{
   margin-bottom: 50px;
 }
 
+section p:last-of-type{
+  text-align: center;
+}
+
 section article h3{
   text-align: center;
 }
@@ -99,7 +118,15 @@ section h4{
     padding-left: 20px;
 }
 
-section article ul li{
+section ul li{
+  list-style: none;
+}
+
+#lineal label{
+  display: inline;
+}
+
+.font-normal{
   font-family: "SourceSansPro-Light";
 }
 
@@ -243,10 +270,6 @@ form ul li label {
 
 label {
   font-family: "SourceSansPro-Regular";
-}
-
-.lineal label{
-  display: inline;
 }
 
 .form {
