--- a/ejericio_1/css/competition.css
+++ b/ejericio_1/css/competition.css
@@ -121,7 +121,7 @@
 
   section form textarea {
     width: 70%;
-    height: 30px;
+    height: 6rem;
     margin-bottom: 20px;
   }
 
@@ -315,7 +315,7 @@
 
   section form ul li textarea {
     width: 90%;
-    height: auto;
+    height: 4rem;
   }
 
   section form p {
