--- a/ejercicio_2/css/style.css
+++ b/ejercicio_2/css/style.css
@@ -21,3 +21,24 @@ header nav figure {
 video {
   width: 100%;
 }
+
+.up-icon{
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 10;
+  background-color: rgba(255, 0, 0, 0.7);
+  border-radius: 95%;
+  padding: 10px 10px 8px 10px;
+  cursor: pointer;
+}
+
+.up-icon:hover{
+  background-color: rgba(255, 0, 0, 0.9);
+}
+
+.up-icon span{
+  font-size: 20px;
+  color:white;
+
+}
