--- a/ejercicio_2/css/style.css
+++ b/ejercicio_2/css/style.css
@@ -1,5 +1,5 @@
-section{
-  margin-top: 10px;
+body{
+  background-color:white;
 }
 
 header nav figure {
@@ -9,7 +9,7 @@ header nav figure {
   text-align: center;
 }
 
-#logo {
+header nav figure img{
   height: 35px;
   width: auto;
 }
@@ -18,8 +18,34 @@ header nav figure {
   background-color: rgb(240, 240, 240);
 }
 
+section{
+  background-color: rgb(255,255,255);
+  margin-top: 10px;
+}
+
+section article h2{
+  background-color: rgba(255,255,255,0.8);
+}
+
+section #jurado figure img , #participantes figure img , .modal figure img{
+  width: 100%;
+}
+
+#multimedia{
+    background-image: url("../img/background.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-bottom: 20px;
+}
+
 video {
   width: 100%;
+}
+
+#conoceMas{
+  text-decoration:none;
+  color: rgb(208, 33, 61)
 }
 
 .up-icon{
@@ -28,9 +54,7 @@ video {
   right: 30px;
   z-index: 10;
   background-color: rgba(255, 0, 0, 0.7);
-  border-radius: 95%;
-  padding: 10px 10px 8px 10px;
-  cursor: pointer;
+  border-radius: 50%;
 }
 
 .up-icon:hover{
@@ -38,7 +62,14 @@ video {
 }
 
 .up-icon span{
+  cursor: pointer;
   font-size: 20px;
   color:white;
+  padding: 10px 10px 11px 10px;
+}
 
+@media (max-width: 767px) {
+  #multimedia{
+    background-image: url("../img/background_smartphone.jpg");
+  }
 }
